Clear separation of phases - snapshot, updates during snapshot, and updates after snapshot. Added a prepender class that uses composition instead of inheritance. Added Builder class for  SnapshotPrepender.